update LeetCode Biweekly Contest 171

--- a/algorithm/LeetCode/[Easy] 1523. Count Odd Numbers in an Interval Range.md
+++ b/algorithm/LeetCode/[Easy] 1523. Count Odd Numbers in an Interval Range.md
@@ -52,3 +52,20 @@ public:
     }
 };
 ```
+
+**Solution 3: (Math)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.84 MB, Beats 38.00%
+```
+```c++
+class Solution {
+public:
+    int countOdds(int low, int high) {
+        if (low % 2 == 0) {
+            return (high - low + 1) / 2;
+        }
+        return (high - low) / 2 + 1;
+    }
+};
+```
