--- a/algorithm/LeetCode/[Easy] 3432. Count Partitions with Even Sum Difference.md
+++ b/algorithm/LeetCode/[Easy] 3432. Count Partitions with Even Sum Difference.md
@@ -76,3 +76,26 @@ public:
     }
 };
 ```
+
+**Solution 2: (Prefix Sum)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 22.31 MB, Beats 78.41%
+```
+```c++
+class Solution {
+public:
+    int countPartitions(vector<int>& nums) {
+        int n = nums.size(), left = 0, right = accumulate(begin(nums), end(nums), 0), ans = 0;
+        for (int i = 0; i < n - 1; i ++) {
+            left += nums[i];
+            right -= nums[i];
+            if ((left - right) % 2 == 0) {
+                ans += 1;
+            }
+
+        }
+        return ans;
+    }
+};
+```
