--- a/algorithm/LeetCode/[Hard] 1000. Minimum Cost to Merge Stones.md
+++ b/algorithm/LeetCode/[Hard] 1000. Minimum Cost to Merge Stones.md
@@ -129,3 +129,59 @@ class Solution:
 
         return fun(0, N-1)
 ```
+
+**Solution 4: (DP Bottom-Up, Prefix Sum, O(n^3 / k))**
+
+      [3,  5,  1,  2,  6], k = 3
+pre 0  3   8   9  11  17
+ck  3
+dp     x---xxxxx           9
+       ^im     ^j
+           x---xxxxx       8
+               x--xxxxxx   9
+ck  4
+dp     x---xxxxxxxxx
+              8
+           x---xxxxxxxxx
+                   9
+ck  5
+dp     x---xxxxxxxxxxxxx
+                9
+       xxxxxxxxx--------
+       ^i      ^m      ^j
+           8
+              17 
+
+```
+Runtime: 2 ms, Beats 57.69%
+Memory: 11.21 MB, Beats 60.74%
+```
+```c++
+class Solution {
+public:
+    int mergeStones(vector<int>& stones, int k) {
+        int n = stones.size(), i, j, ck, mid;
+        if ((n - 1) % (k - 1)) {
+            return -1;
+        }
+        vector<int> prefix(n + 1);
+        for (i = 0; i <  n; i ++) {
+            prefix[i + 1] = prefix[i] + stones[i];
+        }
+        vector<vector<int> > dp(n, vector<int>(n));
+        for (ck = k; ck <= n; ck ++) {
+            for (i = 0; i + ck <= n; i ++) {
+                j = i + ck - 1;
+                dp[i][j] = INT_MAX;
+                for (mid = i; mid < j; mid += k - 1) {
+                    dp[i][j] = min(dp[i][j], dp[i][mid] + dp[mid + 1][j]);
+                }
+                if ((j - i) % (k - 1) == 0) {
+                    dp[i][j] += prefix[j + 1] - prefix[i];
+                }
+            }
+        }
+        return dp[0][n - 1];
+    }
+};
+```
