--- a/algorithm/LeetCode/[Hard] 2141. Maximum Running Time of N Computers.md
+++ b/algorithm/LeetCode/[Hard] 2141. Maximum Running Time of N Computers.md
@@ -145,3 +145,121 @@ public:
     }
 };
 ```
+
+**Solution 4: (Binary Search, sort then sequential fill battery and binary search all solution, O(m log k))**
+    
+         d
+         d
+4    b c d
+3    b c d
+2    a c d
+1    a b c
+
+a: 2, b: 3, c: 4, d: 5
+mid: 4
+
+```
+Runtime: 40 ms, Beats 15.61%
+Memory: 59.84 MB, Beats 28.34%
+```
+```c++
+class Solution {
+public:
+    long long maxRunTime(int n, vector<int>& batteries) {
+        sort(batteries.begin(), batteries.end());
+        long long left = 1, right = accumulate(begin(batteries), end(batteries), 0LL) / n, mid, sum, ans;
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            sum = 0;
+            for (long long x: batteries) {
+                sum += min(x, mid);
+            }
+            if (sum < mid * n) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (Sort, Greedy, max over average can fill others, O(m log m))**
+
+    n computer
+    m batter   -> max(battery) > average(time)
+                                 = sum(battery) / n computer
+               -> waste max battery
+               -> drop max battery
+               -> n - 1 computer
+                  m - 1 batter
+
+              d
+              d
+          b c d
+          a c d
+          a b c
+
+            c
+          b c
+          a c
+          a b
+
+              d
+            c d
+        a b c d
+        a b c d
+n                3
+m                4
+k           1  0
+sum         7 11
+avg         3  3
+
+
+__Intuition__
+The staright idea, is to use all baterial evenly.
+So we take advantage of all the energy wihout any left.
+In this case, we can run up to sum(A) / n minutes.
+This average value is an upper bounde of the final result.
+It's great to start with this enviromental intuition.
+
+__Explanation__
+However, there may be some betteries that has too much energy.
+They are in charge all the time,
+but still can't run out all they have,
+then their energy wastes.
+
+So we can compare the average value with the most powerful battery max(A).
+If max(A) is bigger, then we can use this battery to charge a computer all the time.
+Now we reduce the problem to the left bettery and n - 1 computers.
+
+We continue doing this process,
+until the most powerful bettery max(A) can not run average time sum(A) / n.
+Then the left betteries can help each other and be use evenly until the end.
+One key point of this problem, it's to find out, why betteries can be used "evenly" in this situation.
+
+One quick "prove" is that, the max(A) is smaller than the running time,
+so the maximum battery won't get wasted,
+the other smaller betteries won't even get easted.
+
+```
+Runtime: 21 ms, Beats 68.47%
+Memory: 59.71 MB, Beats 58.92%
+```
+```c++
+class Solution {
+public:
+    long long maxRunTime(int n, vector<int>& batteries) {
+        sort(begin(batteries), end(batteries));
+        long long sum = accumulate(begin(batteries), end(batteries), 0LL);
+        int k = 0, m = batteries.size();
+        while (batteries[m - 1 - k] > sum / (n - k)) {
+            sum -= batteries[m - 1 - k];
+            k += 1;
+        }
+        return sum / (n - k);
+    }
+};
+```
