--- a/algorithm/LeetCode/[Hard] 2234. Maximum Total Beauty of the Gardens.md
+++ b/algorithm/LeetCode/[Hard] 2234. Maximum Total Beauty of the Gardens.md
@@ -167,3 +167,71 @@ public:
     }
 };
 ```
+
+**Solution 3: (Two Pointers, gradually increase min and try all solution)**
+
+newFlowers: 9
+target: 8
+9    x
+8    x . . . .                  <- target
+7    x x x . .
+6    x x x x .
+5    x x x x x
+4    x x x x x x
+3    x x x x x x x
+2    x x x x x x x x . .       <- mn
+1    x x x x x x x x x x
+             ^i      ^j
+                     needed = 2
+
+9    x
+8    x . . .                    <- target
+7    x x x .  
+6    x x x x  
+5    x x x x x
+4    x x x x x x
+3    x x x x x x x . . .        <- mn ^ next step (2)
+2    x x x x x x x x . .                update ans
+1    x x x x x x x x x x
+           ^i      ^j
+           <       needed = 5
+      next step (1)
+```
+Runtime: 40 ms, Beats 87.06%
+Memory: 82.55 MB, Beats 84.71%
+```
+```c++
+class Solution {
+public:
+    long long maximumBeauty(vector<int>& flowers, long long newFlowers, int target, int full, int partial) {
+        sort(begin(flowers), end(flowers), greater<int>());
+        long long n = flowers.size(), i, j, sum = 0, ans = 0;
+        for (i = 0; i < n; i ++) {
+            if (target - flowers[i] > newFlowers) {
+                break;
+            }
+            newFlowers -= max(0, target - flowers[i]);
+        }
+        if (i == n) {
+            return max(n * full, (n - 1) * full + (flowers.back() < target ? (long long)(target - 1) * partial : full));
+        }
+        for (long long mn = flowers.back(), j = n - 1; mn < target; ) {
+            while (j >= i && flowers[j] <= mn) {
+                sum += flowers[j];
+                j -= 1;
+            }
+            int needed = (n - j - 1) * mn - sum;
+            if (needed > newFlowers) {
+                if (--i < 0) {
+                    break;
+                }
+                newFlowers += max(0, target - flowers[i]);
+            } else {
+                ans = max(i * full + mn * partial, ans);    
+                mn += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
