--- a/algorithm/LeetCode/[Hard] 2472. Maximum Number of Non-overlapping Palindrome Substrings.md
+++ b/algorithm/LeetCode/[Hard] 2472. Maximum Number of Non-overlapping Palindrome Substrings.md
@@ -97,3 +97,44 @@ public:
     }
 };
 ```
+
+**Solution 3: (DP Bottom-Up)**
+
+    dp[i] = max non-overlap palidrom substrings of s[0..i]
+
+```
+Runtime: 33 ms, Beats 73.49%
+Memory: 9.28 MB, Beats 93.02%
+```
+```c++
+class Solution {
+public:
+    int maxPalindromes(string s, int k) {
+        int n = s.length(), i, j, ck;
+        vector<int> dp(n);
+        for (i = 0; i < n; i ++) {
+            if (i) {
+                dp[i] = max(dp[i], dp[i - 1]);
+            }
+            ck = 0;
+            while (i - ck >= 0 && i + ck < n && s[i - ck] == s[i + ck]) {
+                if (1 + 2 * ck >= k) {
+                    dp[i + ck] = max(dp[i + ck], (i - ck - 1 >= 0 ? dp[i - ck - 1] : 0) + 1);
+                }
+                ck += 1;
+            }
+            if (i + 1 < n && s[i] == s[i + 1]) {
+                j = i + 1;
+                ck = 0;
+                while (i - ck >= 0 && j + ck < n && s[i - ck] == s[j + ck]) {
+                    if (2 + 2 * ck >= k) {
+                        dp[j + ck] = max(dp[j + ck], (i - ck - 1 >= 0 ? dp[i - ck - 1] : 0) + 1);
+                    }
+                    ck += 1;
+                }
+            }
+        }
+        return dp[n - 1];
+    }
+};
+```
