--- a/algorithm/LeetCode/[Hard] 2565. Subsequence With the Minimum Score.md
+++ b/algorithm/LeetCode/[Hard] 2565. Subsequence With the Minimum Score.md
@@ -77,3 +77,62 @@ public:
     }
 };
 ```
+
+**Solution 2: (Right and Left O(n))**
+
+    min score = right - left + 1
+                -> t match most prefix and suffix of s, and prefix < suffix
+
+
+            vi                         
+s        a  b  a  c  a  b  a
+         vj    vk       
+t        b  z  a  a
+left     1
+right   -1 -1  4  6
+
+
+         0  1  2  3  4  5  6                      
+               vi    <-
+s        a  b  a  a  a  b  a
+               vj    <-
+         vk ->       vj ->  
+t        a  a  b  a  b  a  b
+right   -1 -1 -1  0  1  4  5
+left     0           4
+            2           5
+               5             7
+         -------     ---------
+            i            i
+          prefix       suffix   
+```
+Runtime: 3 ms, Beats 84.62%
+Memory: 13.83 MB, Beats 80.77%
+```
+```c++
+class Solution {
+public:
+    int minimumScore(string s, string t) {
+        int m = s.size(), n = t.size(), i, j = n - 1, k;
+        vector<int> right(n, -1);
+        for (i = m - 1; i >= 0 && j >= 0; i --) {
+            if (s[i] == t[j]) {
+                right[j] = i;
+                j -= 1;
+            }
+        }
+        int ans = j + 1;
+        for (i = 0, k = 0; i < m && k < n && ans > 0; i ++) {
+            if (s[i] == t[k]) {
+                while (j < n && right[j] <= i) {
+                    j += 1;
+                }
+                k += 1;
+                ans = min(ans, j - k);
+            }
+        }
+        return ans;
+
+    }
+};
+```
