--- a/algorithm/LeetCode/[Hard] 2911. Minimum Changes to Make K Semi-palindromes.md
+++ b/algorithm/LeetCode/[Hard] 2911. Minimum Changes to Make K Semi-palindromes.md
@@ -106,3 +106,96 @@ class Solution:
 
         return dp(n, k)
 ```
+
+**Solution 2: (DP Top-Down, 2 level DP)**
+
+                                MinChange(nxt + 1, k - 1)
+                     vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
+                      substring 2
+                      change[nxt+1][nxt2]
+                     vvvvvvvvvvvvv
+                     vnxt+1    vnxt2
+    s .........................................................
+          ^ind      ^nxt 
+          ^^^^^^^^^^^                                  ^^^^^^^
+           change[idx][nxt]                            substring k
+             substring 1
+       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+                        MinChange(0, k)
+
+                            n
+           vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
+substring  ............................................ changes[l][r]
+           ^l                                        ^r
+              0        1                         len - 1
+           ^^^^^^^^ ^^^^^^^^ ^^^^^^^^ ^^^^^^^^ ^^^^^^^^ 
+                        f
+                    ^part0 ^part(f - 1)
+                      ^l + i*f + part    ^l + (len - 1 - i)*f + part
+```
+Runtime: 179, ms Beats 82.76%
+Memory: 11.56 MB, Beats 87.93%
+```
+```c++
+class Solution {
+    int dp[291][201];
+    int changes[201][201];
+    vector<vector<int>> fact;
+    int n;
+    string s;
+
+    int ChangesForSemiPalindrome (int l, int r) {
+        int n = r - l + 1;
+        int ans = 1e9;
+        for (auto f : fact[n]) {
+            int len = n / f;
+            int change = 0;
+            for (int part = 0; part < f; part ++) { 
+                for (int i = 0; i < len / 2; i ++) {
+                    if (s[l + i * f + part] != s[l + (len - i - 1) * f + part]) {
+                        change += 1;
+                    }
+                }
+            }
+            ans = min (ans, change);
+        }
+        return ans;
+    }
+    int MinChange (int ind, int k) {
+        if (ind == n) {
+            return (k == 0? 0 : 1e9);
+        }
+        if (k == 0) {
+            return 1e9;
+        }
+        int &ans = dp[k][ind];
+        if (ans != -1) {
+            return ans;
+        }
+        ans = 1e9;
+        for (int nxt = ind; nxt < n; nxt ++) {
+            ans = min (ans, changes[ind][nxt] + MinChange(nxt+1, k-1));
+        }
+        return ans;
+    }
+public:
+    int minimumChanges(string s, int k) {
+        this->s = s;
+        n = s.length();
+        fact.clear();
+        fact.resize(n + 1);
+        for (int f = 1; f <= n; f ++) {
+            for (int a = f + f; a <= n; a += f) {
+                fact[a].push_back(f);
+            }
+        }
+        for (int j = 0; j < n; j ++) {
+            for (int k = j; k < n; k ++) {
+                changes[j][k] = ChangesForSemiPalindrome(j, k);
+            }
+        }
+        memset(dp, -1, sizeof(dp));
+        return MinChange(0, k);
+    }
+};
+```
