--- a/algorithm/LeetCode/[Hard] 2972. Count the Number of Incremovable Subarrays II.md
+++ b/algorithm/LeetCode/[Hard] 2972. Count the Number of Incremovable Subarrays II.md
@@ -68,3 +68,64 @@ public:
     }
 };
 ```
+
+**Solution 2: (Two Pointers)**
+
+
+     -inc--xxxINCREMOVABLExxx---inc---
+          ^i                 ^j
+
+     1, 2, 3, 4
+              ^i
+ans           10
+
+     6, 5, 7, 8
+        -------
+     ----------
+        ----
+     -------
+        -
+     ----
+     -
+   ^i
+        ^j
+ans     7  6  4  2
+
+     8, 7, 6, 6
+        -------
+     ----------
+     -------
+   ^i
+              ^j
+ans           3  2
+               
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 109.31 MB, Beats 53.16%
+```
+```c++
+class Solution {
+public:
+    long long incremovableSubarrayCount(vector<int>& nums) {
+        int n = nums.size(), i = 0, j;
+        while (i + 1 < n && nums[i] < nums[i + 1]) {
+            i += 1;
+        }
+        if (i == n - 1) {
+            return 1LL * n * (n + 1) / 2;
+        }
+        long long ans = i + 2;
+        for (j = n - 1; j >= 0; j--) {
+            if (j < n - 1 && nums[j] >= nums[j + 1]) {
+                break;
+            }
+            while (i >= 0 && nums[i] >= nums[j]) {
+                i -= 1;
+            }
+            ans += i + 2;  // nums[i+1...j-1] + nums[0...j-1] + nums[1...j-1] + ... + nums[i...j-1]
+                           // -----1---------   ------------------i+1-----------------------------------
+        }
+        return ans;
+    }
+};
+```
