--- a/algorithm/LeetCode/[Hard] 3008. Find Beautiful Indices in the Given Array II.md
+++ b/algorithm/LeetCode/[Hard] 3008. Find Beautiful Indices in the Given Array II.md
@@ -74,3 +74,73 @@ class Solution:
                 res.append(i)
         return res
 ```
+
+**Solution 2: (KMP + Two Pointers)**
+
+     0 1 2 3 4 5 6 7
+     a b a a a b a d
+dp   0 0 1 1 1 2 3
+                   1
+                   0
+
+```
+Runtime: 46 ms, Beats 93.62%
+Memory: 90.10 MB, Beats 94.68%
+```
+```c++
+class Solution {
+    vector<int> find(string &s, string &t) {
+        int m = s.size(), n = t.size(), i, k = 0;
+        vector<int> dp(n);
+        for (i = 1; i < n; i ++) {
+            if (t[k] == t[i]) {
+                dp[i] = k + 1;
+                k += 1;
+            } else {
+                while (k && t[i] != t[k]) {
+                    k = dp[k - 1];
+                }
+                if (t[i] == t[k]) {
+                    k += 1;
+                }
+                dp[i] = k;
+            }
+        }
+        k = 0;
+        vector<int> rst;
+        for (i = 0; i < m; i ++) {
+            if (s[i] == t[k]) {
+                k += 1;
+                if (k == n) {
+                    rst.push_back(i - k + 1);
+                    k = dp[k - 1];
+                }
+            } else {
+                while (k && t[k] != s[i]) {
+                    k = dp[k - 1];
+                }
+                if (t[k] == s[i]) {
+                    k += 1;
+                }
+            }
+        }
+        return rst;
+    }
+public:
+    vector<int> beautifulIndices(string s, string a, string b, int k) {
+        int n = s.size(), i, j = 0;
+        vector<int> dp_a, dp_b, ans;
+        dp_a = move(find(s, a));
+        dp_b = move(find(s, b));
+        for (i = 0; i < dp_a.size(); i ++) {
+            while (j < dp_b.size() && dp_b[j] < dp_a[i] - k) {
+                j += 1;
+            }
+            if (j < dp_b.size() && dp_b[j] <= dp_a[i] + k) {
+                ans.push_back(dp_a[i]);
+            }
+        }
+        return ans;
+    }
+};
+```
