--- a/algorithm/LeetCode/[Hard] 3455. Shortest Matching Substring.md
+++ b/algorithm/LeetCode/[Hard] 3455. Shortest Matching Substring.md
@@ -133,3 +133,87 @@ public:
     }
 };
 ```
+
+**Solution 2: (KMP, Two Pointers)**
+```
+Runtime: 108 ms, Beats 75.73%
+Memory: 150.28 MB, Beats 9.71%
+```
+```c++
+class Solution {
+    vector<int> kmp(string &s, int m) {
+        int n = s.length(), i, k;
+        vector<int> dp(n);
+        k = 0;
+        for (i = 1; i < n; i ++) {
+            if (s[k] == s[i]) {
+                k += 1;
+                dp[i] = k;
+            } else {
+                while (k && s[k] != s[i]) {
+                    k = dp[k - 1];
+                }
+                if (s[k] == s[i]) {
+                    k += 1;
+                }
+                dp[i] = k;
+            }
+        }
+        return vector<int>(dp.begin() + m + 1, dp.end());
+    }
+public:
+    int shortestMatchingSubstring(string s, string p) {
+        int n = p.length(), i = 0, j, k = 0, na, nb, nc, ans = INT_MAX;
+        string a, b, c, cs;
+        vector<int> dp_a, dp_b, dp_c;
+        for (j = 0; j < n; j ++) {
+            if (p[j] == '*' || j == n - 1) {
+                if (k == 0) {
+                    a = p.substr(i, j - i);
+                } else if (k == 1) {
+                    b = p.substr(i, j - i);
+                } else {
+                    c = p.substr(i);
+                }
+                i = j + 1;
+                k += 1;
+            }
+        }
+        na = a.length();
+        nb = b.length();
+        nc = c.length();
+        cs = a + "#" + s;
+        dp_a = move(kmp(cs, na));
+        cs = b + "#" + s;
+        dp_b = move(kmp(cs, nb));
+        cs = c + "#" + s;
+        dp_c = move(kmp(cs, nc));
+        i = 0;
+        j = 0;
+        k = 0;
+        while (i + nb + nc < dp_a.size()){
+            while (i < dp_a.size() && dp_a[i] != na) {
+                i += 1;
+            }
+            if (i >= dp_a.size()) {
+                break;
+            }
+            while (j < dp_b.size() && (j < i + nb || dp_b[j] != nb)) {
+                j += 1;
+            }
+            if (j >= dp_b.size()) {
+                break;
+            }
+            while (k < dp_c.size() && (k < j + nc || dp_c[k] != nc)) {
+                k += 1;
+            }
+            if (k >= dp_c.size()) {
+                break;
+            }
+            ans = min(ans, k - i + na);
+            i += 1;
+        }
+        return ans == INT_MAX? -1 : ans;
+    }
+};
+```
