--- a/algorithm/LeetCode/[Hard] 3504. Longest Palindrome After Substring Concatenation II.md
+++ b/algorithm/LeetCode/[Hard] 3504. Longest Palindrome After Substring Concatenation II.md
@@ -150,3 +150,62 @@ public:
     }
 };
 ```
+
+**Solution 2: (DP Bottom-Up)**
+
+s:              'abcxxyxxz'
+                 ^^^^---
+t: 'ddxcbad', 
+   or reversed, 'dabcxdd'
+                  ^^^^
+result:         'abcx xyx xcba'
+                 ^^^^ --- ^^^^
+              dp[i][j]
+                      s_pal[i]
+```
+Runtime: 189 ms, Beats 60.61%
+Memory: 15.79 MB, Beats 94.70%
+```
+```c++
+class Solution {
+    bool checkPal(string &s, int i, int j) {
+        while (i < j) {
+            if (s[i] != s[j]) {
+                return false;
+            }
+            i += 1;
+            j -= 1;
+        }
+        return true;
+    }    
+    vector<int> longestPalindromes(string &s) {
+        int n = s.size();
+        vector<int> rst(n + 1);
+        for (int i = 0; i < n; i ++) {
+            for (int j = n - 1; i <= j && rst[i] < 2; j --) {
+                rst[i] = checkPal(s, i, j) ? j - i + 1 : 1;
+            }
+        }
+        return rst;
+    }
+public:
+    int longestPalindrome(string s, string t) {
+        reverse(begin(t), end(t));
+        vector<int> s_pal = longestPalindromes(s), t_pal = longestPalindromes(t);
+        int m = s.size(), n = t.size(), ans = 0;
+        int dp[1001][1001] = {};  
+        for (int i = 0; i < m; i ++) {
+            for (int j = 0; j < n; j ++) {
+                if (s[i] == t[j]) {
+                    dp[i + 1][j + 1] = dp[i][j] + 1;    
+                } else {
+                    dp[i + 1][j + 1] = 0;
+                }
+                ans = max(ans, 2 * dp[i + 1][j + 1] 
+                    + max(s_pal[i + (s[i] == t[j])] , t_pal[j + (s[i] == t[j])]));
+            }
+        }
+        return ans;  
+    }
+};
+```
