--- a/algorithm/LeetCode/[Hard] 3534. Path Existence Queries in a Graph II.md
+++ b/algorithm/LeetCode/[Hard] 3534. Path Existence Queries in a Graph II.md
@@ -197,3 +197,97 @@ public:
     }
 };
 ```
+
+**Solution 2: (Binary Lifting, spare table, O((N + Q) * log(N)))**
+
+
+
+Sort the nodes by their nums value; in that order every node’s neighbours are closest by value, therefore most likely to be connected.
+With sliding widnow we can compute what is the node that we can go furthest to the right. (picture below - parent edges in red)
+
+maxDiff 5
+
+      ---          -----
+    -----       --------
+2 4 7 8 9 15 16 17 19 22
+-----     -----------
+  -------    --------
+
+The structure forms a tree, where we can pre-calculate what is the biggest hop that we can make from each node. That is the parent.
+Pre-compute, with binary-lifting, how far to the right you can move in 2ᵏ hops; each query is then answered in O(log n).
+
+__Complexity__
+Time complexity:
+O((n+q)∗log(n))
+
+Space complexity:
+O(n∗log(n))
+
+```
+Runtime: 122 ms, Beats 91.67%
+Memory: 282.84 MB, Beats 89.29%
+```
+```c++
+class Solution {
+public:
+    vector<int> pathExistenceQueries(int n, vector<int>& nums, int maxDiff, vector<vector<int>>& queries) {
+        vector<pair<int, int>> newNums(n);
+        for (int i = 0; i < n; i++) {
+            newNums[i] = { nums[i], i };
+        }
+        sort(newNums.begin(), newNums.end());
+
+        vector<int> getI(n);
+        for (int i = 0; i < n; i++) {
+            getI[newNums[i].second] = i;
+        }
+
+        int st[100005][18];
+        int l = 0;
+        for (int r = 0; r < n; r++) {
+            while (newNums[r].first - newNums[l].first > maxDiff) {
+                st[l][0] = r - 1;
+                l += 1;
+            }
+        }
+        while (l < n) {
+            st[l][0] = n - 1;
+            l += 1;
+        }
+
+        for (int j = 1; j < 18; j++) {
+            for (int i = 0; i < n; i++) {
+                st[i][j] = st[st[i][j - 1]][j - 1];
+            }
+        }
+
+        vector<int> ans(queries.size(), -1);
+        for (int i = 0; i < queries.size(); i++) {
+            int a = getI[queries[i][0]];
+            int b = getI[queries[i][1]];
+            if (a > b) swap(a, b);
+            if (a == b) {
+                ans[i] = 0;
+                continue;
+            }
+
+            int curr = a;
+            int steps = 0;
+            for (int j = 17; j >= 0; j--) {
+                if (st[curr][j] < b) {
+                    curr = st[curr][j];
+                    steps += (1 << j);
+                }
+            }
+
+            if (st[curr][0] >= b) {
+                ans[i] = steps + 1;
+            } else {
+                ans[i] = -1;
+            }
+        }
+
+        return ans;
+    }
+};
+```
