--- a/algorithm/LeetCode/[Hard] 3734. Lexicographically Smallest Palindromic Permutation Greater Than Target.md
+++ b/algorithm/LeetCode/[Hard] 3734. Lexicographically Smallest Palindromic Permutation Greater Than Target.md
@@ -171,3 +171,76 @@ public:
     }
 };
 ```
+
+**Solution 2: (Backtracking, prune)**
+```
+Runtime: 4 ms, Beats 71.22%
+Memory: 12.28 MB, Beats 67.83%
+```
+```c++
+class Solution {
+    bool bt(vector<int> &cnt, string &target, bool big, char mid, int n, vector<char> &path, string &ans){
+        if (ans != "") {
+            return true;
+        }
+        int half = n / 2;
+        if (path.size() == half){
+            string left(path.begin(), path.end());
+            string right = left;
+            reverse(right.begin(), right.end());
+            string pal = "";
+            if (n % 2) {
+                pal = left + mid + right;
+            } else {
+                pal = left + right;
+            }
+            if (pal > target) {
+                ans = pal;
+                return true;
+            }
+            return false;
+        }
+        int i = path.size();
+        for (int c = 0; c < 26; c ++) {
+            if (cnt[c] == 0) {
+                continue;
+            }
+            if (!big && c + 'a' < target[i]) {
+                continue;
+            }
+            path.push_back(c + 'a');
+            cnt[c] -= 1;
+            bool newbig = big || (c + 'a' > target[i]);
+            if (bt(cnt, target, newbig, mid, n, path, ans)) {
+                return true;
+            }
+            path.pop_back();
+            cnt[c] += 1;
+        }
+        return false;
+    }
+public:
+    string lexPalindromicPermutation(string s, string target) {
+        vector<int> cnt(26);
+        for (auto &c: s) {
+            cnt[c - 'a'] += 1;
+        }
+        int odd = 0;
+        char mid = 0;
+        for (int i = 0; i < 26; i ++) {
+            if (cnt[i] % 2) {
+                odd += 1;
+                mid = 'a' + i;   
+            }
+            cnt[i] /= 2;
+        }
+        if (odd > 1) {
+            return "";
+        }
+        vector<char> path;
+        string ans;
+        bt(cnt, target, false, mid, s.size(), path, ans);
+        return ans;
+    }
+};
+```
